--- a/app/src/main/res/drawable/login_butt_bg.xml
+++ b/app/src/main/res/drawable/login_butt_bg.xml
@@ -17,7 +17,7 @@
 <item android:state_pressed="true">
 
          <shape xmlns:android="http://schemas.android.com/apk/res/android">
-             <solid android:color="#737FC7"/>
+             <solid android:color="#97A6F6"/>
              <corners android:radius="15sp" />
 
 
