--- a/app/src/main/res/drawable/login_with_google_btn_bg.xml
+++ b/app/src/main/res/drawable/login_with_google_btn_bg.xml
@@ -17,7 +17,7 @@
     <item android:state_pressed="true">
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#737FC7"/>
+            <solid android:color="#1BD2C2"/>
             <corners android:radius="15sp" />
 
 
